--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example usage of surfinBH package."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,42 +28,189 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fit_3dq8 = surfinBH.LoadFits('3dq8')"
+    "## Download fit data, this only needs to be done once"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_name = '3dq8'\n",
+    "surfinBH.DownloadData(fit_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the fit, this only needs to be done once at the start of a script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_3dq8 = surfinBH.LoadFits(fit_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read the documentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on Fit3dq8 in module surfinBH._fit_evaluators.fit_3dq8 object:\n",
+      "\n",
+      "class Fit3dq8(surfinBH.surfinBH.SurFinBH)\n",
+      " |  A class for the 3dq8 surrogare final BH fits presented in Varma et al. 2018,\n",
+      " |  in prep. This model predicts the final mass mC, final spin chiC and final\n",
+      " |  kick velocity velC, for the remnants of nonprecessing binary black hole systems.\n",
+      " |  The fits are done using Gaussian Process Regression (GPR) and also provide an\n",
+      " |  error estimate along with the fit value.\n",
+      " |  \n",
+      " |  Usage:\n",
+      " |  \n",
+      " |  import surfinBH\n",
+      " |  \n",
+      " |  # First load the model\n",
+      " |  fit_3dq8 = surfinBH.LoadFits('3dq8')\n",
+      " |  \n",
+      " |  # Mass ratio and component spins along orbital angular momentum direction\n",
+      " |  q = 6.7\n",
+      " |  chi1z = 0.74\n",
+      " |  chi2z = -0.6\n",
+      " |  x = [q, chi1z, chi2z]\n",
+      " |  \n",
+      " |  ## Evaluate the fits and GPR error estimate.\n",
+      " |  \n",
+      " |  # Final mass\n",
+      " |  mC, mC_err_est = fit_3dq8('mC', x)\n",
+      " |  \n",
+      " |  # Final spin along orbital angular momentum direction\n",
+      " |  chiCz, chiCz_err_est = fit_3dq8('chiC', x)\n",
+      " |  \n",
+      " |  # Final kick velocity (velCz is zero for nonprecessing systems)\n",
+      " |  velC, velC_err_est = fit_3dq8('velC', x)\n",
+      " |  velCx, velCy = velC\n",
+      " |  velCx_err_est, velCy_err_est = velC_err_est\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      Fit3dq8\n",
+      " |      surfinBH.surfinBH.SurFinBH\n",
+      " |      __builtin__.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __call__(self, fit_key, x, **kwargs)\n",
+      " |      Evaluates fits for the 3dq8 model.\n",
+      " |      \n",
+      " |      Transforms the input parameter to fit parameters before evaluating the fit.\n",
+      " |      That is, maps from [q, chi1z, chi2z] to [np.log(q), chiHat, chi_a]\n",
+      " |      chiHat is defined in Eq.(3) of 1508.07253.\n",
+      " |      chi_a = (chi1z - chi2z)/2.\n",
+      " |  \n",
+      " |  __init__(self, name, **kwargs)\n",
+      " |      #-------------------------------------------------------------------------\n",
+      " |  \n",
+      " |  load_fits(self, h5file)\n",
+      " |      Loads fits from h5file and returns a dictionary of fits.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
+      " |  \n",
+      " |  evaluate_fits(self, x, fit_key)\n",
+      " |      Evaluates a particular fit by passing fit_key to self.fits\n",
+      " |  \n",
+      " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
+      " |      Loads a single fit\n",
+      " |  \n",
+      " |  load_vector_fit(self, fit_key, h5file)\n",
+      " |      Loads a vector of fits\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(fit_3dq8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the fits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.9873609284592729, 0.00012163917745553122)\n",
-      "(0.41679855817624384, 0.0)\n",
-      "(array([-0.00025954, -0.00019479]), array([2.7951575e-05, 3.3238598e-05]))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/sklearn/gaussian_process/gpr.py:335: UserWarning: Predicted variances smaller than 0. Setting those variances to 0.\n",
-      "  warnings.warn(\"Predicted variances smaller than 0. \"\n"
+      "0.9755948246635386 0.8252803051336776 1.3619682645194556e-05 -0.00012366316087957945\n",
+      "0.00016477744655067896 0.0 2.2750466327545156e-05 4.098085091380365e-05\n"
      ]
     }
    ],
    "source": [
-    "x = [2, 0.1, 0.2]\n",
-    "print fit_3dq8('mC', x)\n",
-    "print fit_3dq8('chiC', x)\n",
-    "print fit_3dq8('velC', x)"
+    "q = 6.7\n",
+    "chi1z = 0.74\n",
+    "chi2z = -0.6\n",
+    "x = [q, chi1z, chi2z]\n",
+    "\n",
+    "## Evaluate the fits and GPR error estimate.\n",
+    "\n",
+    "# Final mass\n",
+    "mC, mC_err_est = fit_3dq8('mC', x)\n",
+    " \n",
+    "# Final spin along orbital angular momentum direction\n",
+    "chiCz, chiCz_err_est = fit_3dq8('chiC', x)\n",
+    "  \n",
+    "# Final kick velocity (velCz is zero for nonprecessing systems)\n",
+    "velC, velC_err_est = fit_3dq8('velC', x)\n",
+    "velCx, velCy = velC\n",
+    "velCx_err_est, velCy_err_est = velC_err_est\n",
+    "\n",
+    "print mC, chiCz, velCx, velCy\n",
+    "print mC_err_est, chiCz_err_est, velCx_err_est, velCy_err_est"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Similarly for 7d fits"
    ]
   },
   {
