--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example usage of surfinBH package."
+    "# Example usage of surfinBH7dq2 fit."
    ]
   },
   {
