Update ipthon examples

--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -102,6 +102,12 @@
       " |  are done using Gaussian Process Regression (GPR) and also provide an error\n",
       " |  estimate along with the fit value.\n",
       " |  \n",
+      " |  This model has been trained in the parameter space:\n",
+      " |      q <= 8, |chi1z| <= 0.8, |chi2z| <= 0.8\n",
+      " |  \n",
+      " |  However, it extrapolates reasonably to:\n",
+      " |      q <= 10, |chi1z| <= 1, |chi2z| <= 1\n",
+      " |  \n",
       " |  IMPORTANT NOTE: The kick vector is defined in the followin frame. The z-axis is\n",
       " |  along the orbital angular momentum. The x-axis is along the line of separation\n",
       " |  from the smaller BH to the larger BH at t=-100M, when t=0 occurs at the peak of\n",
@@ -154,7 +160,7 @@
       " |      chiHat is defined in Eq.(3) of 1508.07253.\n",
       " |      chi_a = (chi1z - chi2z)/2.\n",
       " |  \n",
-      " |  __init__(self, name, **kwargs)\n",
+      " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
       " |  \n",
       " |  load_fits(self, h5file)\n",
@@ -163,8 +169,15 @@
       " |  ----------------------------------------------------------------------\n",
       " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
       " |  \n",
-      " |  evaluate_fits(self, x, fit_key)\n",
-      " |      Evaluates a particular fit by passing fit_key to self.fits\n",
+      " |  check_param_limits(self, x)\n",
+      " |      Checks that x is within allowed range of paramters.\n",
+      " |      Raises a warning if outside self.soft_param_lims and\n",
+      " |      raises an error if outside self.hard_param_lims.\n",
+      " |      If these are None, skips the checks.\n",
+      " |  \n",
+      " |  evaluate_fits(self, fit_params, fit_key)\n",
+      " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
+      " |      Assumes input params x have been mapped to fitParams.\n",
       " |  \n",
       " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
       " |      Loads a single fit\n",
@@ -206,14 +219,6 @@
      "text": [
       "0.9755948246635386 0.8252803051336776 1.3619682645194556e-05 -0.00012366316087957945\n",
       "0.00016477744655067896 0.0 2.2750466327545156e-05 4.098085091380365e-05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/sklearn/gaussian_process/gpr.py:335: UserWarning: Predicted variances smaller than 0. Setting those variances to 0.\n",
-      "  warnings.warn(\"Predicted variances smaller than 0. \"\n"
      ]
     }
    ],
