--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -102,6 +102,12 @@
       " |  done using Gaussian Process Regression (GPR) and also provide an error estimate\n",
       " |  along with the fit value.\n",
       " |  \n",
+      " |  This model has been trained in the parameter space:\n",
+      " |      q <= 2, |chiA| <= 0.8, |chiB| <= 0.8\n",
+      " |  \n",
+      " |  However, it extrapolates reasonably to:\n",
+      " |      q <= 3, |chiA| <= 1, |chiB| <= 1\n",
+      " |  \n",
       " |  IMPORTANT NOTE: The component spins, remnant spin and kick vectors are defined\n",
       " |  in the followin frame. The z-axis is along the orbital angular momentum at\n",
       " |  t=-100M, when t=0 occurs at the peak of the waveform. The x-axis is along the\n",
@@ -147,7 +153,7 @@
       " |  __call__(self, fit_key, x, **kwargs)\n",
       " |      #-------------------------------------------------------------------------\n",
       " |  \n",
-      " |  __init__(self, name, **kwargs)\n",
+      " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
       " |  \n",
       " |  load_fits(self, h5file)\n",
@@ -156,8 +162,15 @@
       " |  ----------------------------------------------------------------------\n",
       " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
       " |  \n",
-      " |  evaluate_fits(self, x, fit_key)\n",
-      " |      Evaluates a particular fit by passing fit_key to self.fits\n",
+      " |  check_param_limits(self, x)\n",
+      " |      Checks that x is within allowed range of paramters.\n",
+      " |      Raises a warning if outside self.soft_param_lims and\n",
+      " |      raises an error if outside self.hard_param_lims.\n",
+      " |      If these are None, skips the checks.\n",
+      " |  \n",
+      " |  evaluate_fits(self, fit_params, fit_key)\n",
+      " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
+      " |      Assumes input params x have been mapped to fitParams.\n",
       " |  \n",
       " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
       " |      Loads a single fit\n",
