--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import surfinBH"
@@ -217,8 +208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9755948246635386 0.8252803051336776 1.3619682645194556e-05 -0.00012366316087957945\n",
-      "0.00016477744655067896 0.0 2.2750466327545156e-05 4.098085091380365e-05\n"
+      "mC=9.756e-01 mC_err_est=1.648e-04\n",
+      "chiCz=8.253e-01 chiCz_err_est=7.871e-05\n",
+      "velC=[-5.894e-05,-8.398e-05,0] velC_err_est=[1.945e-05,2.148e-05,0]\n"
      ]
     }
    ],
@@ -241,8 +233,10 @@
     "velCx, velCy = velC\n",
     "velCx_err_est, velCy_err_est = velC_err_est\n",
     "\n",
-    "print mC, chiCz, velCx, velCy\n",
-    "print mC_err_est, chiCz_err_est, velCx_err_est, velCy_err_est"
+    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
+    "print('chiCz=%.3e chiCz_err_est=%.3e'%(chiCz, chiCz_err_est))\n",
+    "print('velC=[%.3e,%.3e,0] velC_err_est=[%.3e,%.3e,0]'%(velCx, velCy, velCx_err_est,\n",
+    "                                                       velCy_err_est))\n"
    ]
   },
   {
