--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import surfinBH"
@@ -210,17 +201,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9423305899147032 0.00010275690045781838\n",
-      "[ 0.05132385 -0.02486683  0.77008724] [0.00032226 0.00034565 0.00052999]\n",
-      "[-0.00024941  0.00032128 -0.00279415] [2.90635950e-05 3.12869794e-05 6.52047178e-05]\n"
+      "mC=9.628e-01 mC_err_est=1.160e-03\n",
+      "chiC=[2.307e-01,5.016e-02,6.781e-01] chiC_err_est=[5.110e-03,5.959e-03,6.239e-03]\n",
+      "velC=[1.424e-03,5.826e-04,2.032e-03] velC_err_est=[3.383e-04,2.650e-04,6.827e-04]\n"
      ]
     }
    ],
    "source": [
     "# Mass ratio and component spins\n",
     "q = 1.2\n",
-    "chiA = [0.1, 0.2, 0.3]\n",
-    "chiB = [0.2, -0.5, 0.3]\n",
+    "chiA = [0.5, 0.05, 0.3]\n",
+    "chiB = [-0.5, -0.05, 0.1]\n",
     "x = [q] + chiA + chiB\n",
     "\n",
     "# Final mass and its 1-sigma error etimate\n",
@@ -232,9 +223,13 @@
     "# Final kick vector and its 1-sigma error estimate\n",
     "velC, velC_err_est = fit('velC', x)\n",
     "\n",
-    "print mC, mC_err_est\n",
-    "print chiC, chiC_err_est\n",
-    "print velC, velC_err_est"
+    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
+    "print('chiC=[%.3e,%.3e,%.3e] chiC_err_est=[%.3e,%.3e,%.3e]'%(chiC[0], chiC[1], chiC[2],\n",
+    "                                                             chiC_err_est[0], chiC_err_est[1],\n",
+    "                                                             chiC_err_est[2]))\n",
+    "print('velC=[%.3e,%.3e,%.3e] velC_err_est=[%.3e,%.3e,%.3e]'%(velC[0], velC[1], velC[2],\n",
+    "                                                             velC_err_est[0], velC_err_est[1],\n",
+    "                                                             velC_err_est[2]))"
    ]
   },
   {
