--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -145,14 +145,15 @@
       " |  \n",
       " |  __call__(self, fit_key, x, **kwargs)\n",
       " |      Evaluates fits for the 3dq8 model.\n",
-      " |      \n",
-      " |      Transforms the input parameter to fit parameters before evaluating the fit.\n",
-      " |      That is, maps from [q, chi1z, chi2z] to [np.log(q), chiHat, chi_a]\n",
-      " |      chiHat is defined in Eq.(3) of 1508.07253.\n",
-      " |      chi_a = (chi1z - chi2z)/2.\n",
       " |  \n",
       " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
+      " |  \n",
+      " |  get_fit_params(self, x, fit_key)\n",
+      " |      Transforms the input parameter to fit parameters for the 3dq8 model.\n",
+      " |      That is, maps from [q, chi1z, chi2z] to [np.log(q), chiHat, chi_a]\n",
+      " |      chiHat is defined in Eq.(3) of 1508.07253.\n",
+      " |      chi_a = (chi1z - chi2z)/2.\n",
       " |  \n",
       " |  load_fits(self, h5file)\n",
       " |      Loads fits from h5file and returns a dictionary of fits.\n",
@@ -166,9 +167,9 @@
       " |      raises an error if outside self.hard_param_lims.\n",
       " |      If these are None, skips the checks.\n",
       " |  \n",
-      " |  evaluate_fits(self, fit_params, fit_key)\n",
+      " |  evaluate_fits(self, x, fit_key)\n",
       " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
-      " |      Assumes input params x have been mapped to fitParams.\n",
+      " |      Assumes self.get_fit_params() has been overriden.\n",
       " |  \n",
       " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
       " |      Loads a single fit\n",
