--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -147,21 +147,31 @@
       " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
       " |  \n",
-      " |  load_fits(self, h5file)\n",
-      " |      Loads fits from h5file and returns a dictionary of fits.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
-      " |  \n",
       " |  check_param_limits(self, x)\n",
       " |      Checks that x is within allowed range of paramters.\n",
       " |      Raises a warning if outside self.soft_param_lims and\n",
       " |      raises an error if outside self.hard_param_lims.\n",
       " |      If these are None, skips the checks.\n",
       " |  \n",
-      " |  evaluate_fits(self, fit_params, fit_key)\n",
+      " |  get_fit_params(self, x, fit_key)\n",
+      " |      Transforms the input parameter to fit parameters for the 7dq2 model.\n",
+      " |      That is, maps from\n",
+      " |      x = [q, chi1x, chi1y, chi1z, chi2x, chi2y, chi2z]\n",
+      " |      fit_params = [np.log(q), chi1x, chi1y, chiHat, chi2x, chi2y, chi_a]\n",
+      " |      \n",
+      " |      chiHat is defined in Eq.(3) of 1508.07253, but with chi1z and chi2z instead\n",
+      " |      of chi1 and chi2.\n",
+      " |      chi_a = (chi1z - chi2z)/2.\n",
+      " |  \n",
+      " |  load_fits(self, h5file)\n",
+      " |      Loads fits from h5file and returns a dictionary of fits.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
+      " |  \n",
+      " |  evaluate_fits(self, x, fit_key)\n",
       " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
-      " |      Assumes input params x have been mapped to fitParams.\n",
+      " |      Assumes self.get_fit_params() has been overriden.\n",
       " |  \n",
       " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
       " |      Loads a single fit\n",
@@ -201,9 +211,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mC=9.628e-01 mC_err_est=1.160e-03\n",
-      "chiC=[2.307e-01,5.016e-02,6.781e-01] chiC_err_est=[5.110e-03,5.959e-03,6.239e-03]\n",
-      "velC=[1.424e-03,5.826e-04,2.032e-03] velC_err_est=[3.383e-04,2.650e-04,6.827e-04]\n"
+      "mC=9.439e-01 mC_err_est=1.126e-04\n",
+      "chiC=[3.539e-02,1.059e-02,7.409e-01] chiC_err_est=[3.405e-04,3.583e-04,4.113e-04]\n",
+      "velC=[4.640e-04,-1.352e-05,5.270e-03] velC_err_est=[3.423e-05,2.179e-05,6.643e-05]\n"
      ]
     }
    ],
