--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import surfinBH"
@@ -87,54 +96,19 @@
       "Help on Fit3dq8 in module surfinBH._fit_evaluators.fit_3dq8 object:\n",
       "\n",
       "class Fit3dq8(surfinBH.surfinBH.SurFinBH)\n",
-      " |  A class for the surfinBH3dq8 model presented in Varma et al., 2018, in prep.\n",
-      " |  This model predicts the final mass mC, final spin chiC and final kick velocity\n",
-      " |  velC, for the remnants of nonprecessing binary black hole systems.  The fits\n",
-      " |  are done using Gaussian Process Regression (GPR) and also provide an error\n",
-      " |  estimate along with the fit value.\n",
+      " |  A class for the surfinBH3dq8 model presented in Varma et al., 2018,\n",
+      " |  in prep. This model predicts the final mass mC, final spin chiC and final\n",
+      " |  kick velocity velC, for the remnants of nonprecessing binary black hole\n",
+      " |  systems. The fits are done using Gaussian Process Regression (GPR) and\n",
+      " |  also provide an error estimate along with the fit value.\n",
       " |  \n",
       " |  This model has been trained in the parameter space:\n",
-      " |      q <= 8, |chi1z| <= 0.8, |chi2z| <= 0.8\n",
+      " |      q <= 8, |chiAz| <= 0.8, |chiBz| <= 0.8\n",
       " |  \n",
       " |  However, it extrapolates reasonably to:\n",
-      " |      q <= 10, |chi1z| <= 1, |chi2z| <= 1\n",
+      " |      q <= 10, |chiAz| <= 1, |chiBz| <= 1\n",
       " |  \n",
-      " |  IMPORTANT NOTE: The kick vector is defined in the followin frame. The z-axis is\n",
-      " |  along the orbital angular momentum. The x-axis is along the line of separation\n",
-      " |  from the smaller BH to the larger BH at t=-100M, when t=0 occurs at the peak of\n",
-      " |  the waveform. The y-axis completes the triad.\n",
-      " |  \n",
-      " |  Usage:\n",
-      " |  \n",
-      " |  import surfinBH\n",
-      " |  \n",
-      " |  fit_name = 'surfinBH3dq8'\n",
-      " |  \n",
-      " |  # Get data for the fit. This only needs to done **once, ever**.\n",
-      " |  surfinBH.DownloadData(fit_name)\n",
-      " |  \n",
-      " |  # Load the fit. This only needs to be done **once** at the start of your script.\n",
-      " |  fit = surfinBH.LoadFits(fit_name)\n",
-      " |  \n",
-      " |  # Mass ratio and component spins along orbital angular momentum direction\n",
-      " |  q = 6.7\n",
-      " |  chi1z = 0.74\n",
-      " |  chi2z = -0.6\n",
-      " |  x = [q, chi1z, chi2z]\n",
-      " |  \n",
-      " |  ## Evaluate the fits and GPR error estimate.\n",
-      " |  \n",
-      " |  # Final mass and its 1-sigma error etimate\n",
-      " |  mC, mC_err_est = fit('mC', x)\n",
-      " |  \n",
-      " |  # Final spin and its 1-sigma error estimate\n",
-      " |  chiCz, chiCz_err_est = fit('chiC', x)\n",
-      " |  \n",
-      " |  # Final kick vector and its 1-sigma error estimate\n",
-      " |  # NOTE: velCz is zero for nonprecessing systems\n",
-      " |  velC, velC_err_est = fit('velC', x)\n",
-      " |  velCx, velCy = velC\n",
-      " |  velCx_err_est, velCy_err_est = velC_err_est\n",
+      " |  See __call__ method for evaluation.\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit3dq8\n",
@@ -144,38 +118,41 @@
       " |  Methods defined here:\n",
       " |  \n",
       " |  __call__(self, fit_key, x, **kwargs)\n",
-      " |      Evaluates fits for the 3dq8 model.\n",
+      " |      Evaluates the surfinBH3dq8 model.\n",
+      " |      \n",
+      " |      Arguments:\n",
+      " |          fit_key:\n",
+      " |              'mC', 'chiC' or 'velC', for remnant mass, spin and kick velocity,\n",
+      " |              respectively.\n",
+      " |      \n",
+      " |          x:\n",
+      " |              Array of [q, chiAz, chiBz], where q >= 1 is the mass ratio and\n",
+      " |              chiAz (chiBz) is the dimensionless spin of the larger (smaller) BH\n",
+      " |              along the z-direction.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          If fit_key='mC':\n",
+      " |              returns mC, mC_err_est\n",
+      " |              The value and 1-sigma error estimate in remnant mass.\n",
+      " |          If fit_key='chiC':\n",
+      " |              returns chiCz, chiCz_err_est:\n",
+      " |              The value and 1-sigma error estimate in remnant spin along the\n",
+      " |              z-direction.\n",
+      " |          If fit_key='velC':\n",
+      " |              returns [velCx, velCy], [velCx_err_est, velCy_err_est]:\n",
+      " |              The value and 1-sigma error estimate in the in-plane remnant kick\n",
+      " |              vector.\n",
+      " |      \n",
+      " |      The spins and kick are defined in the coorbital frame at t=-100 M from the\n",
+      " |      peak of the waveform. This frame is defined as:\n",
+      " |      The z-axis is along the orbital angular momentum direction of the binary.\n",
+      " |      The x-axis is along the line of separation from the smaller BH to\n",
+      " |          the larger BH at this time.\n",
+      " |      The y-axis completes the triad.\n",
+      " |      We obtain this frame from the waveform as defined in arxiv:1705.07089.\n",
       " |  \n",
       " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
-      " |  \n",
-      " |  get_fit_params(self, x, fit_key)\n",
-      " |      Transforms the input parameter to fit parameters for the 3dq8 model.\n",
-      " |      That is, maps from [q, chi1z, chi2z] to [np.log(q), chiHat, chi_a]\n",
-      " |      chiHat is defined in Eq.(3) of 1508.07253.\n",
-      " |      chi_a = (chi1z - chi2z)/2.\n",
-      " |  \n",
-      " |  load_fits(self, h5file)\n",
-      " |      Loads fits from h5file and returns a dictionary of fits.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
-      " |  \n",
-      " |  check_param_limits(self, x)\n",
-      " |      Checks that x is within allowed range of paramters.\n",
-      " |      Raises a warning if outside self.soft_param_lims and\n",
-      " |      raises an error if outside self.hard_param_lims.\n",
-      " |      If these are None, skips the checks.\n",
-      " |  \n",
-      " |  evaluate_fits(self, x, fit_key)\n",
-      " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
-      " |      Assumes self.get_fit_params() has been overriden.\n",
-      " |  \n",
-      " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
-      " |      Loads a single fit\n",
-      " |  \n",
-      " |  load_vector_fit(self, fit_key, h5file)\n",
-      " |      Loads a vector of fits\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
