--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import surfinBH"
@@ -87,11 +96,11 @@
       "Help on Fit7dq2 in module surfinBH._fit_evaluators.fit_7dq2 object:\n",
       "\n",
       "class Fit7dq2(surfinBH.surfinBH.SurFinBH)\n",
-      " |  A class for the surfinBH7dq2 model presented in Varma et al., 2018, in prep.\n",
-      " |  This model predicts the final mass mC, final spin chiC and final kick velocity\n",
-      " |  velC, for the remnants of precessing binary black hole systems.  The fits are\n",
-      " |  done using Gaussian Process Regression (GPR) and also provide an error estimate\n",
-      " |  along with the fit value.\n",
+      " |  A class for the surfinBH7dq2 model presented in Varma et al., 2018,\n",
+      " |  in prep. This model predicts the final mass mC, final spin vector chiC and\n",
+      " |  final kick velocity vector velC, for the remnants of precessing binary\n",
+      " |  black hole systems.  The fits are done using Gaussian Process Regression\n",
+      " |  (GPR) and also provide an error estimate along with the fit value.\n",
       " |  \n",
       " |  This model has been trained in the parameter space:\n",
       " |      q <= 2, |chiA| <= 0.8, |chiB| <= 0.8\n",
@@ -99,40 +108,7 @@
       " |  However, it extrapolates reasonably to:\n",
       " |      q <= 3, |chiA| <= 1, |chiB| <= 1\n",
       " |  \n",
-      " |  IMPORTANT NOTE: The component spins, remnant spin and kick vectors are defined\n",
-      " |  in the followin frame. The z-axis is along the orbital angular momentum at\n",
-      " |  t=-100M, when t=0 occurs at the peak of the waveform. The x-axis is along the\n",
-      " |  line of separation from the smaller BH to the larger BH at this time. The\n",
-      " |  y-axis completes the triad.\n",
-      " |  \n",
-      " |  Usage:\n",
-      " |  \n",
-      " |  import surfinBH\n",
-      " |  \n",
-      " |  fit_name = 'surfinBH7dq2'\n",
-      " |  \n",
-      " |  # Get data for the fit. This only needs to done **once, ever**.\n",
-      " |  surfinBH.DownloadData(fit_name)\n",
-      " |  \n",
-      " |  # Load the fit. This only needs to be done **once** at the start of your script.\n",
-      " |  fit = surfinBH.LoadFits(fit_name)\n",
-      " |  \n",
-      " |  # Mass ratio and component spins\n",
-      " |  q = 1.2\n",
-      " |  chiA = [0.1, 0.2, 0.3]\n",
-      " |  chiB = [0.2, -0.5, 0.3]\n",
-      " |  x = [q] + chiA + chiB\n",
-      " |  \n",
-      " |  ## Evaluate the fits and GPR error estimate.\n",
-      " |  \n",
-      " |  # Final mass and its 1-sigma error etimate\n",
-      " |  mC, mC_err_est = fit('mC', x)\n",
-      " |  \n",
-      " |  # Final spin vector and its 1-sigma error estimate\n",
-      " |  chiC, chiC_err_est = fit('chiC', x)\n",
-      " |  \n",
-      " |  # Final kick vector and its 1-sigma error estimate\n",
-      " |  velC, velC_err_est = fit('velC', x)\n",
+      " |  See __call__ method for evaluation.\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit7dq2\n",
@@ -142,42 +118,91 @@
       " |  Methods defined here:\n",
       " |  \n",
       " |  __call__(self, fit_key, x, **kwargs)\n",
-      " |      #-------------------------------------------------------------------------\n",
-      " |  \n",
-      " |  __init__(self, name)\n",
-      " |      #-------------------------------------------------------------------------\n",
-      " |  \n",
-      " |  check_param_limits(self, x)\n",
-      " |      Checks that x is within allowed range of paramters.\n",
-      " |      Raises a warning if outside self.soft_param_lims and\n",
-      " |      raises an error if outside self.hard_param_lims.\n",
-      " |      If these are None, skips the checks.\n",
-      " |  \n",
-      " |  get_fit_params(self, x, fit_key)\n",
-      " |      Transforms the input parameter to fit parameters for the 7dq2 model.\n",
-      " |      That is, maps from\n",
-      " |      x = [q, chi1x, chi1y, chi1z, chi2x, chi2y, chi2z]\n",
-      " |      fit_params = [np.log(q), chi1x, chi1y, chiHat, chi2x, chi2y, chi_a]\n",
+      " |      Evaluates the surfinBH7dq2 model.\n",
       " |      \n",
-      " |      chiHat is defined in Eq.(3) of 1508.07253, but with chi1z and chi2z instead\n",
-      " |      of chi1 and chi2.\n",
-      " |      chi_a = (chi1z - chi2z)/2.\n",
+      " |      Arguments:\n",
+      " |          fit_key:\n",
+      " |              'mC', 'chiC' or 'velC', for remnant mass, spin vector and kick\n",
+      " |              vector respectively.\n",
+      " |      \n",
+      " |          x:\n",
+      " |              Array of [q, chiAx, chiAy, chiAz, chiBx, chiBy, chiBz], where q >=\n",
+      " |              1 is the mass ratio and chiA (chiB) is the dimensionless spin of\n",
+      " |              the larger (smaller) BH.\n",
+      " |      \n",
+      " |              By default, the spins are assumed to be the component spins at\n",
+      " |              t=-100 M from the peak of the waveform, and in the coorbital frame,\n",
+      " |              defined as:\n",
+      " |              The z-axis is along the orbital angular momentum at t=-100M.\n",
+      " |              The x-axis is along the line of separation from the smaller BH to\n",
+      " |                  the larger BH at this time.\n",
+      " |              The y-axis completes the triad.\n",
+      " |              We obtain this frame from the waveform as defined in\n",
+      " |              arxiv:1705.07089.\n",
+      " |      \n",
+      " |              If 'omega0' is given, instead the spins are assumed to be the\n",
+      " |              component spins when the PN orbital frequency = omega0. The\n",
+      " |              spins are assumed to be in the inertial frame, defined as:\n",
+      " |              The z-axis is along the Newtonian orbital angular momentum when the\n",
+      " |                  PN orbital frequency = omega0.\n",
+      " |              The x-axis is along the line of separation from the smaller BH to\n",
+      " |                  the larger BH at this frequency.\n",
+      " |              The y-axis completes the triad.\n",
+      " |              We obtain this frame from PN.\n",
+      " |              Given the spins at omega0, we evolve the spins using PN until\n",
+      " |              the orbital frequency = 0.018 M, then we further evolve the spins\n",
+      " |              using the NRSur7dq2 model (arxiv:1705.07089) until t=-100M from the\n",
+      " |              peak of the waveform.  Then we evaluate the fits using the spins at\n",
+      " |              t=-100 M.  Finally, we transform the remnant spin and kick vectors\n",
+      " |              back to the inertial frame defined above.\n",
+      " |      \n",
+      " |      Optional PN arguments:\n",
+      " |      \n",
+      " |          omega0:\n",
+      " |              Initial dimensionless orbital frequency in units of 1/M, where M is\n",
+      " |              the total mass. If this is given, the spins in x are assumed to be\n",
+      " |              the component spins at this orbital frequency, and in the inertial\n",
+      " |              frame as defined above. The returned remnant spin and kick vectors\n",
+      " |              are also in the same frame.\n",
+      " |              Default: None.\n",
+      " |      \n",
+      " |          PN_approximant:\n",
+      " |              Approximant used to do the PN spin evolution. Choose from\n",
+      " |              'SpinTaylorT1', 'SpinTaylorT4' or 'SpinTaylorT5'.\n",
+      " |              Default: 'SpinTaylorT4'.\n",
+      " |      \n",
+      " |          PN_dt:\n",
+      " |              Dimensionless time step size in units of M (total mass), used for\n",
+      " |              the PN evolution. You may need to increase this if omega0 is very\n",
+      " |              low.\n",
+      " |              Default: 0.1\n",
+      " |      \n",
+      " |          PN_spin_order:\n",
+      " |              Twice the PN order of spin effects. E.g., use 7 for 3.5PN.\n",
+      " |              Default: 7\n",
+      " |      \n",
+      " |          PN_phase_order\n",
+      " |              Twice the PN order in phase. E.g., use 7 for 3.5PN.\n",
+      " |              Default: 7\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          If fit_key='mC':\n",
+      " |              returns mC, mC_err_est\n",
+      " |              The value and 1-sigma error estimate in remnant mass.\n",
+      " |          If fit_key='chiC':\n",
+      " |              returns chiC, chiC_err_est\n",
+      " |              The value and 1-sigma error estimate in remnant spin vector.\n",
+      " |          If fit_key='velC':\n",
+      " |              returns velC, velC_err_est\n",
+      " |              The value and 1-sigma error estimate in remnant kick vector.\n",
+      " |      \n",
+      " |          By default, these vectors are defined in the coorbital frame at\n",
+      " |              t=-100 M, as described above.\n",
+      " |          If 'omega0' is not None, these are defined in the inertial frame at\n",
+      " |              orbital frequency = omega0, as described above.\n",
       " |  \n",
-      " |  load_fits(self, h5file)\n",
-      " |      Loads fits from h5file and returns a dictionary of fits.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
-      " |  \n",
-      " |  evaluate_fits(self, x, fit_key)\n",
-      " |      Evaluates a particular fit by passing fit_key to self.fits.\n",
-      " |      Assumes self.get_fit_params() has been overriden.\n",
-      " |  \n",
-      " |  load_scalar_fit(self, fit_key=None, h5file=None, fit_data=None)\n",
-      " |      Loads a single fit\n",
-      " |  \n",
-      " |  load_vector_fit(self, fit_key, h5file)\n",
-      " |      Loads a vector of fits\n",
+      " |  __init__(self, name, load_nrsur=False)\n",
+      " |      #-------------------------------------------------------------------------\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
@@ -199,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate the fits"
+    "## Evaluate the fits (using spins at t=-100 M)"
    ]
   },
   {
@@ -218,6 +243,9 @@
     }
    ],
    "source": [
+    "# Note: The component spins, remnant spin and kick are all\n",
+    "# assumed to be in the coorbital frame at t=-100M.\n",
+    "\n",
     "# Mass ratio and component spins\n",
     "q = 1.2\n",
     "chiA = [0.5, 0.05, 0.3]\n",
@@ -232,6 +260,54 @@
     "  \n",
     "# Final kick vector and its 1-sigma error estimate\n",
     "velC, velC_err_est = fit('velC', x)\n",
+    "\n",
+    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
+    "print('chiC=[%.3e,%.3e,%.3e] chiC_err_est=[%.3e,%.3e,%.3e]'%(chiC[0], chiC[1], chiC[2],\n",
+    "                                                             chiC_err_est[0], chiC_err_est[1],\n",
+    "                                                             chiC_err_est[2]))\n",
+    "print('velC=[%.3e,%.3e,%.3e] velC_err_est=[%.3e,%.3e,%.3e]'%(velC[0], velC[1], velC[2],\n",
+    "                                                             velC_err_est[0], velC_err_est[1],\n",
+    "                                                             velC_err_est[2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate the fits using spins at earlier frequencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded NRSur7dq2 waveform model\n",
+      "mC=9.437e-01 mC_err_est=7.577e-05\n",
+      "chiC=[5.412e-02,-1.411e-02,7.493e-01] chiC_err_est=[3.178e-04,3.412e-04,3.145e-04]\n",
+      "velC=[5.362e-05,1.348e-04,-5.110e-03] velC_err_est=[1.934e-05,1.709e-05,3.629e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note: The component spins, remnant spin and kick are all\n",
+    "# assumed to be in the inertial frame defined at orbital frequency=omega0.\n",
+    "\n",
+    "# Initial dimensionless orbital frequency (in units of 1/M)\n",
+    "omega0 = 7e-3\n",
+    "\n",
+    "# Final mass and its 1-sigma error etimate\n",
+    "mC, mC_err_est = fit('mC', x, omega0=omega0)\n",
+    "  \n",
+    "# Final spin vector and its 1-sigma error estimate\n",
+    "chiC, chiC_err_est = fit('chiC', x, omega0=omega0)\n",
+    "  \n",
+    "# Final kick vector and its 1-sigma error estimate\n",
+    "velC, velC_err_est = fit('velC', x, omega0=omega0)\n",
     "\n",
     "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
     "print('chiC=[%.3e,%.3e,%.3e] chiC_err_est=[%.3e,%.3e,%.3e]'%(chiC[0], chiC[1], chiC[2],\n",
